# BandagePro

./: .gitignore  BUILD.md  Bandage.pro  BandagePro.pro  CMakeLists.txt  README.md  README_ENHANCED.md  UNDO_REDO_IMPLEMENTATION.md  WINDOWS_BUILD_GUIDE.md  build.sh  build_windows.bat
.github/workflows/: auto-release.yml  build-windows.yml  build.yml  release.yml  snapshots.yml  test.yml
blast/: blasthit.cpp  blasthit.h  blasthitpart.h  blastqueries.cpp  blastqueries.h  blastquery.cpp  blastquery.h  blastquerypath.cpp  blastquerypath.h  blastsearch.cpp  blastsearch.h  buildblastdatabaseworker.cpp  buildblastdatabaseworker.h  runblastsearchworker.cpp  runblastsearchworker.h
build_scripts/: bandagepro_build_linux.sh  bandagepro_build_mac.sh  bandagepro_build_windows.bat  bandagepro_build_windows_32bit.bat  installation.txt
command_line/: commoncommandlinefunctions.cpp  commoncommandlinefunctions.h  image.cpp  image.h  info.cpp  info.h  layout.cpp  layout.h  load.cpp  load.h  querypaths.cpp  querypaths.h  reduce.cpp  reduce.h  settings.cpp  settings.h
graph/: annotation.cpp  annotation.h  annotationsmanager.cpp  annotationsmanager.h  assemblygraph.cpp  assemblygraph.h  assemblygraphbuilder.cpp  contiguity.h  debruijnedge.cpp  debruijnedge.h  debruijnnode.cpp  debruijnnode.h  fastawriter.cpp  fastawriter.h  gfawriter.cpp  gfawriter.h  graphcommand.cpp  graphcommand.h  graphicsitemedge.cpp  graphicsitemedge.h  graphicsitemlink.cpp  graphicsitemlink.h  graphicsitemnode.cpp  graphicsitemnode.h  graphlocation.cpp  graphlocation.h  graphscope.cpp  graphscope.h  io.cpp  io.h  movenodescommand.cpp  movenodescommand.h  nodecolorer.cpp  nodecolorer.h  nodecolorers.h  ogdfnode.h  path.cpp  path.h  querydistance.h  sequenceutils.cpp  (+3 more)
graphsearch/: graphsearch.cpp
graphsearch/hmmer/: hmmersearch.cpp  hmmersearch.h
graphsearch/minimap2/: minimap2search.cpp  minimap2search.h
io/: bed.h  bedloader.cpp  bedloader.h  cigar.inl  filedownloader.cpp  filedownloader.h
program/: globals.cpp  globals.h  graphlayoutworker.cpp  graphlayoutworker.h  main.cpp  memory.cpp  memory.h  scinot.cpp  scinot.h  settings.cpp  settings.h
resources/: BandageProPP.desktop  CMakeLists.txt
tests/: bandage_command_line_tests.sh  bandagepro_command_line_tests.sh  bandageprotests.cpp  bandagetests.cpp
tests/inputs/: test.contigs.fa.zst
ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  annotationswidget.cpp  bandagegraphicsview.cpp  bandagegraphicsview.h  bedwidget.cpp  blastsearchdialog.cpp  blastsearchdialog.h  colourbutton.cpp  colourbutton.h  enteroneblastquerydialog.cpp  enteroneblastquerydialog.h  graphicsviewzoom.cpp  graphicsviewzoom.h  graphinfodialog.cpp  infotextwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsscene.cpp  mygraphicsscene.h  mygraphicsview.cpp  mygraphicsview.h  myprogressdialog.cpp  myprogressdialog.h  mytablewidget.cpp  mytablewidget.h  nodewidthvisualaid.cpp  nodewidthvisualaid.h  pathspecifydialog.cpp  pathspecifydialog.h  querypathsdialog.cpp  querypathsdialog.h  querypathsequencecopybutton.h  querypathspushbutton.cpp  querypathspushbutton.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  (+8 more)
ui/dialogs/: aboutdialog.ui  graphsearchdialog.cpp  hitfiltersdialog.cpp  hitfiltersdialog.h  logandownloaddialog.cpp  logandownloaddialog.h  logandownloaddialog.ui  querypathsdialog.cpp  querypathsdialog.h
ui/widgets/: collapsebutton.h  infotextwidget.cpp  infotextwidget.h
